# bootcamp_100

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
Day 1/: main.py
Day 10/: CALCULATOR.py  art.py  days_in_month.py
Day 2/: main.py
Day 3/: BMI2.py  TREASURE_ISLAND.py  leap_year.py  love_calc.py  pizza.py
Day 4/: ROCK_PAPER_SCISSORS.py  heads_tails.py  name_picker.py  x_placer.py
Day 5/: PASSWORD_GENERATOR.py  average_heigh.py  even_sum.py  high_score.py  job_interview.py
Day 6/: SOLVE_THE_MAZE.py  hurdle_1.py  hurdle_2.py  hurdle_3.py  hurdle_4.py
Day 7/: HANGMAN.py  hangman_resources.py
Day 8/: CAESAR_CYPHER.py  functions.py  paint.py  prime.py
Day 9/: BLIND_AUCTION.py  dictionary_in_list.py  grading_program.py
