[tool.poetry]
name = "bootcamp-100"
version = "0.1.0"
description = "Contains all libraries to run every project on the bootcamp."
authors = ["alfondehesa <alfondehesa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
